PlatformService/platforms-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: platforms-dep
spec:
 replicas: 3
 selector:
  matchLabels:
   app: platformservice
 template:
  metadata:
    labels:
     app: platformservice
  spec:
    containers:
     - name: platformservice
       image: samireldarov/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80cd
    targetPort: 8080
  - name: platformgrpc
    protocol: TCP
    port: 666
    targetPort: 666
