PlatformService/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  rules:
  - host: acme.com
    http:
      paths:
      - path: /api/platforms
        pathType: Prefix
        backend:
          service:
            name: platforms-clusterip-srv
            port:
              number: 80
      - path: /api/c/platforms
        pathType: Prefix
        backend:
          service:
            name: commands-clusterip-srv
            port:
              number: 80
